--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "netflix-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.ts",
   "scripts": {
-    "start": "node dist/app.js",
+    "start": "node dist/server.js",
     "build": "tsc"
   },
   "keywords": [],
