--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,14 @@
     "target": "ES6",
     "module": "CommonJS",
     "outDir": "./dist",
-    "rootDir": "./src",
     "esModuleInterop": true,
-    "strict": true
-  }
+    "strict": true,
+  },
+  "include": [
+    "./**/*",
+    "server.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
