--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "netflix-api",
   "version": "1.0.0",
   "description": "",
-  "main": "server.ts",
+  "main": "app.ts",
   "scripts": {
     "build": "npm install && tsc",
     "dev": "nodemon --exec ./node_modules/.bin/ts-node src/app",
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongodb": "^5.7.0",
     "mongoose": "^7.4.3"
   },
   "devDependencies": {
